# spu

./: MODULE.bazel
rust/libspu-sys/: BUILD.bazel  Cargo.toml  build.rs
rust/libspu-sys/src/: lib.rs
spu/: README.md
spu/libspu-sys/: BUILD.bazel  build.rs
spu/libspu-sys/src/: bridge.cc  lib.rs  link.cc  vec_value.h
spu/spu-rs/: BUILD.bazel  Cargo.toml
spu/spu-rs-example/: BUILD.bazel  Cargo.toml
spu/spu-rs-example/src/: main.rs
spu/spu-rs/src/: io.rs  lib.rs  runtime.rs
